[package]
name = "platform-game-experiment"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
best = "0.6"
cgmath = "0.16"
custom_derive = "0.1"
fnv = "1.0"
gfx = "0.17"
gfx_device_gl = "0.15"
gfx_window_glutin = "0.23"
glutin = "0.15"
newtype_derive = "0.1"
num = "0.2"
